<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <item android:id="@+id/bottomNavHome"
      android:title="@string/bottom_nav_home_title"
      android:icon="@drawable/baseline_home_24"
      />
  <item android:id="@+id/bottomNavFavo"
      android:title="@string/bottom_nav_fav_title"
      android:icon="@drawable/baseline_favorite_border_24"
      />
  <item android:id="@+id/bottomNavAdd"
      android:title="@string/bottom_nav_add_title"
      android:icon="@drawable/baseline_add_24"
      />
  <item android:id="@+id/bottomNavNoti"
      android:title="@string/bottom_nav_noti_title"
      android:icon="@drawable/baseline_notifications_24"
      />
  <item android:id="@+id/bottomNavPer"
      android:title="@string/bottom_nav_user_title"
      android:icon="@drawable/baseline_person_24"
      />
</menu>