<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:visible="false" android:id="@+id/sideNavGroupMain">
        <item
            android:id="@+id/sideNavHomeNew"
            android:title="@string/side_nav_home_title"
            android:icon="@drawable/baseline_home_24"
            android:checked="true"
            />
        <item
            android:id="@+id/sideNavLogin"
            android:title="@string/side_nav_login"
            android:icon="@drawable/baseline_login_24"
            />


    </group>
<group android:visible="true" android:id="@+id/sideNavGroupAuth">
    <item
        android:id="@+id/sideNavHome"
        android:title="@string/side_nav_home_title"
        android:icon="@drawable/baseline_home_24"
        android:checked="true"
        />
    <item
        android:id="@+id/sideNavProfile"
        android:title="@string/side_nav_home_profile_title"
        android:icon="@drawable/baseline_person_24"

        />
    <item
        android:id="@+id/sideNavFavourite"
        android:title="@string/side_nav_home_favo"
        android:icon="@drawable/baseline_favorite_border_24"

        />
    <item
        android:id="@+id/sideNavLogout"
        android:title="@string/side_nav_logout"
        android:icon="@drawable/baseline_logout_24"
        android:visible="true"
        />

</group>


</menu>